# vge

./: .clang-format  .gitattributes  README.md  imgui.ini  links  vge.code-workspace
resources/meshes/: credits.md
resources/meshes/bedroom/: iscv2.mtl
resources/meshes/sponza/: sponza.mtl
resources/shaders/: basic_shader.fs  basic_shader.vs  debug_shader.fs  debug_shader.vs
scripts/: vge_compile.sh  vge_setup.sh
src/: CMakeLists.txt  main.cpp
src/tests/: CMakeLists.txt  test_vge_allocator.cpp  test_vge_slot_map.cpp  test_vge_thread.cpp  vge_tests.cpp
src/vge/: CMakeLists.txt
src/vge/algorithm/: CMakeLists.txt
src/vge/container/: CMakeLists.txt  vge_array.h  vge_array.tpp  vge_slot_map.h  vge_slot_map.tpp  vge_string.h
src/vge/core/: CMakeLists.txt  vge_attributes.h  vge_core.h  vge_log.cpp  vge_log.h  vge_thread.cpp  vge_thread.h  vge_types.h
src/vge/debug/: CMakeLists.txt  vge_assert.h  vge_debug.cpp  vge_debug.h  vge_imgui.cpp  vge_imgui.h  vge_imgui_windows.h  vge_log.cpp  vge_log.h  vge_profiler.cpp  vge_profiler.h
src/vge/gfx/: CMakeLists.txt  vge_color.cpp  vge_color.h  vge_draw_cmd.h  vge_gfx.h  vge_gfx_gl.cpp  vge_gfx_gl.h  vge_gfx_manager.cpp  vge_gfx_manager.h  vge_gfx_types.h  vge_gl_error.h  vge_obj_loader.cpp  vge_obj_loader.h  vge_shader.cpp  vge_shader.h  vge_texture.cpp  vge_texture.h
src/vge/memory/: CMakeLists.txt  vge_allocator.cpp  vge_allocator.h  vge_global_allocator.cpp  vge_global_allocator.h  vge_linear_allocator.cpp  vge_linear_allocator.h  vge_malloc_allocator.cpp  vge_malloc_allocator.h  vge_memory.h  vge_memory_manager.cpp  vge_memory_manager.h
src/vge/utility/: CMakeLists.txt  vge_utility.cpp  vge_utility.h
